@@ -1,7 +1,7 @@
 Package: naivebayes
 Type: Package
 Title: High Performance Implementation of the Naive Bayes Algorithm
-Version: 0.9.2
+Version: 0.9.3
 Author: Michal Majka
 Maintainer: Michal Majka <michalmajka@hotmail.com>
 Description: High performance implementation of the Naive Bayes algorithm.
@@ -10,6 +10,6 @@ BugReports: http://github.com/majkamichal/naivebayes/issues
 License: GPL-2
 Encoding: UTF-8
 NeedsCompilation: no
-Packaged: 2018-01-03 04:30:33 UTC; Michal
+Packaged: 2019-01-07 21:19:36 UTC; Michal
 Repository: CRAN
-Date/Publication: 2018-01-03 04:41:25 UTC
+Date/Publication: 2019-01-07 21:50:51 UTC
